Fixed the dropdown content z-index .

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -867,3 +867,6 @@ footer.fixed{
 .input-field label{
 	left: 0;
 }
+.dropdown-content {
+	z-index: 995;
+}
